@@ -41,7 +41,9 @@
 <li>coders/psd.c (ReadPSDImage): Fix SourceForge bug #341
 &quot;out-of-bounds read in coders/psd.c:1435&quot;.
 (WriteWhiteBackground): Fix SourceForge bug #350 &quot;SEGV in
-coders/psd.c:1685&quot;.</li>
+coders/psd.c:1685&quot;.
+(DecodeImage): Fix SourceForge bug #351 &quot;heap-buffer-overflow in
+coders/psd.c:142&quot;.</li>
 <li>coders/xcf.c (load_tile): Fix SourceForge bug #337
 &quot;heap-buffer-overflow in coders/xcf.c:373&quot;.</li>
 <li>coders/pict.c (WritePICTImage): Fix SourceForge bug #340
