@@ -4,6 +4,8 @@
 	"out-of-bounds read in coders/psd.c:1435".
 	(WriteWhiteBackground): Fix SourceForge bug #350 "SEGV in
 	coders/psd.c:1685".
+	(DecodeImage): Fix SourceForge bug #351 "heap-buffer-overflow in
+	coders/psd.c:142".
 
 	* coders/xcf.c (load_tile): Fix SourceForge bug #337
 	"heap-buffer-overflow in coders/xcf.c:373".
